# ny-yellowcab-advanced

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  NYC_TAXI_FEATURE_ENGINEERING_ARTICLE.md  README.md  pyproject.toml  requirements.txt  run_all.bat  setup.py
scripts/: clean_curate.py  create_logo.py  markdown_to_pdf.py  validate_curated.py  visualize_data.py
tests/: test_validate_curated.py
